remove trailing comma
Signed-off-by: Stefan Kracht <stefan.kracht@direktiv.io>

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -762,7 +762,7 @@
         "tableRow": {
           "errorLabel": "Error",
           "envsLabel": "{{count}} environment variables",
-          "envsLabel_one": "{{count}} environment variable",
+          "envsLabel_one": "{{count}} environment variable"
         },
         "contextMenu": {
           "rebuild": "Rebuild"
